# wcol

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
apps/explorer/engine/: Cargo.toml
apps/explorer/engine/examples/: export_cbor.rs
apps/explorer/engine/src/: presets.rs  query_plan.rs  typegen.rs  update.rs  view_model.rs  workspace.rs
demo/: README.md  app.tsx  wcol-query.ts
docs/: ARCHITECTURE.md  BASELINE_COMMANDS.md  COMPARISONS.md  FORMAT.md  QUERY_AST_SUPPORTED.md
engine-shell/: .gitignore  LICENSE  README.md
engine-shell/rust/engine-kernel/: Cargo.toml
engine-shell/rust/engine-kernel/src/: diff.rs  lib.rs  patch.rs
rust/: Cargo.toml
rust/wcol-cli/wcol-cli/: Cargo.toml
rust/wcol-cli/wcol-cli/src/app/: bench.rs  mod.rs  parity.rs  shared.rs
rust/wcol-decoder/: Cargo.toml
rust/wcol-decoder/benches/: query_kernels.rs
rust/wcol-decoder/src/: bench.rs  lib.rs  runtime.rs  timing.rs
rust/wcol-decoder/src/decode/: mod.rs  numeric.rs  primitive.rs  simd.rs
rust/wcol-decoder/src/decode/string/: ids.rs  like_mask.rs  pattern.rs  preamble.rs  reconstruct.rs
rust/wcol-decoder/src/exec/: decompress.rs
rust/wcol-decoder/src/ffi/: deferred_filter.rs  exec.rs  null_policy.rs  row_candidates.rs
rust/wcol-decoder/src/ffi/plan/: lifecycle.rs  mod.rs  results.rs  stats.rs
rust/wcol-decoder/src/native/: cache.rs  config.rs  exec.rs  mem_budget.rs  perf_counters.rs
rust/wcol-decoder/src/query/: agg.rs  compare.rs  filter.rs  filter_literals.rs  hll.rs  mask.rs  plan.rs
rust/wcol-decoder/wcol-decoder/src/: constants.rs  parse.rs  sql_plan.rs  tests.rs  types.rs
rust/wcol-decoder/wcol-decoder/src/decode/: mask.rs
rust/wcol-decoder/wcol-decoder/src/decode/string/: header.rs  mod.rs  token.rs
rust/wcol-decoder/wcol-decoder/src/exec/: mod.rs
rust/wcol-decoder/wcol-decoder/src/ffi/: bench.rs  dict.rs  group_output.rs  materialize.rs  mem.rs  mod.rs  required_pages.rs  row_exec.rs  row_order.rs  runtime.rs
rust/wcol-decoder/wcol-decoder/src/ffi/plan/: config.rs  reducer.rs
rust/wcol-decoder/wcol-decoder/src/native/: error.rs  helpers.rs  mod.rs  pool.rs  result.rs  runtime.rs  types.rs
rust/wcol-decoder/wcol-decoder/src/query/: group.rs  group_dict_hist.rs  mod.rs  scale.rs  scan.rs
rust/wcol-decoder/wcol-decoder/tests/: wasm_bench.rs
rust/wcol-wasm/: Cargo.toml  wasm-bindgen-lite.config.json
rust/wcol-wasm/src/: lib.rs
scripts/: benchmark-all-queries.mjs  build-browser-runtime.mjs  build-browser.mjs  build-demo.mjs  build-engine-wasm.mjs  build-wasm.mjs  compare-report.mjs  create-publish-history.sh  diagnose-query-performance.mjs  encode-datasets.sh  encode-trends-rollups.sh  prepare-crates-parquet.sh  prepare-demo-crates.mjs  prepare-demo-datasets.mjs  prepare-trends-rollups.mjs  run-explorer-queries.mjs  test-cbor-interop.mjs
src/: index.ts  public.ts
tests/: categories-queries.test.ts  categories-queries.ts  dependency-queries.test.ts  dependency-queries.ts  explorer-queries.test.ts  explorer-queries.ts  hits-queries.test.ts  hits-queries.ts  maintainers-queries.test.ts  plan.test.ts  (+7 more)
(+158 files in other folders)
