[package]
name = "wcol-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
lz4_flex = { version = "0.11", default-features = false, features = ["safe-decode", "std"] }
rustc-hash = "2.0"
wcol-format = { path = "../wcol-format" }
wcol-sql-parser = { path = "../wcol-sql-parser", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
libc = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.1"

[features]
default = []
bench = []
bench_api = []
native = []
sql_api = ["dep:wcol-sql-parser"]
timing = []
simd_like_raw = []
simd_like_dict = []
simd_all = ["simd_like_raw", "simd_like_dict"]

[[bench]]
name = "query_kernels"
harness = false
required-features = ["bench"]
