[workspace]

[package]
name = "wcol-engine"
version = "0.1.0"
edition = "2021"
description = "wcol demo app engine — canonical state, view-model patches, CBOR wire"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
typegen = ["dep:ts-rs", "engine-kernel/typegen"]

[[bin]]
name = "export-types"
path = "src/bin/export-types.rs"
required-features = ["typegen"]

[[example]]
name = "export_cbor"
path = "examples/export_cbor.rs"

[dependencies]
ciborium = "0.2"
engine-kernel = { path = "../../../engine-shell/rust/engine-kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", optional = true }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
