[package]
name = "engine-kernel"
version = "0.1.0"
edition = "2021"
description = "Generic view-model patch diff/apply for Rust/Wasm engine shells"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
enum_glob_use = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"

[features]
default = []
typegen = ["dep:ts-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", optional = true }
