[package]
name = "wcol-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wcol-decoder = { path = "../wcol-decoder", features = ["sql_api", "native", "timing"] }
wcol-encoder = { path = "../wcol-encoder" }
regex = "1"
serde_json = "1"
